bugfix: prevent overflow on shopping cart (delete button)

--- a/ressources/css/root.css
+++ b/ressources/css/root.css
@@ -17,9 +17,10 @@ body {
     max-width: 80%;
 }
 
-.w-60 {
-    max-width: 60%;
+.w-50 {
+    max-width: 50%;
 }
+
 
 .sidebar-nav {
     width: var(--offcanvas-width);
